# nixpkgs-update

./: .gitattributes  .gitignore  .hindent.yaml  .travis.yml  CVENOTES.org  LICENSE  README.md  check-attrpath-version-test.sh  check-attrpath-version.sh  check-result.sh  default.nix  delete-merged.sh  fix-src-url.sh  flake.nix  nix-update.cabal  nixpkgs-update.cabal  nixpkgs-update.nix  package.yaml  setup-nixpkgs.sh  shell.nix  stack.yaml  to-staging.sh  try-binaries.sh  up.sh  ups.sh  utils.sh
.github/: CONTRIBUTING.md  FUNDING.yml
app/: Main.hs
doc/: batch-updates.md  contact.md  contributing.md  details.md  donate.md  failed-update-schema.md  installation.md  interactive-updates.md  introduction.md  nixpkgs-maintainer-faq.md  package-tracking-db.md  r-ryantm.md  toc.md
docs/: nixpkgs-maintainer-faq.md  nu.md
nix/: sources.json
old/: README.md  package.yaml  stack.yaml
packages-finders/: repology.sh
pkgs/: default.nix  nixpkgs-update-rust.nix
rust/: .env  .envrc  .gitignore  Cargo.toml  flake.nix
rust/.direnv/: flake-profile-1-link
rust/migrations/2023-08-12-152848_create_packages/: down.sql  up.sql
rust/migrations/2026-03-22-140000_add_update_failure_and_leaderboard/: down.sql  up.sql
rust/migrations/2026-03-22-160000_meta_install_estimate/: down.sql  up.sql
rust/migrations/2026-03-22-180000_hl4_streaks_and_wip_pr/: down.sql  up.sql
rust/src/: db_report.rs  github.rs  leaderboard.rs  lib.rs  main.rs  models.rs  nix.rs  repology.rs  schema.rs
src/: Blacklist.hs  CVE.hs  Check.hs  Clean.hs  DeleteMerged.hs  FailureDb.hs  FailureKind.hs  (+26 more)
(+26 files in other folders)
